tests/invalid/set_pop_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    v: int = s.pop(1)
    print(v)


if __name__ == "__main__":
    run_case()
